--- a/index.html
+++ b/index.html
@@ -4,24 +4,40 @@
 <head>
 	<meta charset="UTF-8"/>
 	<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-	<title>Muralidhara Bhat KS</title>
+	<title>Muralidhara Bhat KS | Full Stack Web Developer & UX Designer</title>
 	<link href="./css/style.css" rel="stylesheet"/>
 </head>
 
 <body>
 
 <main>
+	<!-- ************************ NAVIGATION / QUICK LINKS *************** -->
+	<header class="header">
+		<div>
+			<img alt="logo" src=""/>
+		</div>
+		<nav>
+			<ul>
+				<!--***********  https://muralidharabhat.me  ************* -->
+				<li><a href="#profile">Home</a></li>
+				<li><a href="#projects">Projects</a></li>
+				<li><a href="#skills">Skills</a></li>
+				<li><a href="#education">Education</a></li>
+				<li><a href="#contact">Contact</a></li>
+			</ul>
+		</nav>
+	</header>
 	<!-- ***********************  ABOUT / PROFILE  *********************** -->
-	<header>
+	<section class="profile" id="profile">
 		<h1>Muralidhara Bhat KS</h1>
 		<h2>
 			<span>Full Stack Web Developer</span>
 			<span>UX Designer</span>
 		</h2>
-	</header>
+	</section>
 
 	<!-- ********************  PROJECTS / PORTFOLIO  ********************* -->
-	<section>
+	<section class="projects" id="projects">
 		<h2>Featured Projects</h2>
 		<p>
 			View selected projects below. More information can be found at my
@@ -30,7 +46,7 @@
 
 		<section>
 			<h3>Analytics Trading Using Python</h3>
-			<img alt="code sample of Trading project" src="project-thumbnail.png"/>
+			<img alt="code sample of Trading project" src="#"/>
 			<p>
 				Algorithmic Trading is a new way of trading that has created a new
 				wave. The advantage of algorithmic trading are that it has not only
@@ -40,10 +56,9 @@
 			<a href="#" target="_blank">View project</a>
 		</section>
 
-		<!-- Copy the whole <section> block to add more projects. -->
 		<section>
 			<h3>Web Music Player</h3>
-			<img alt="image of Music player" src="project-thumbnail.png"/>
+			<img alt="image of Music player" src="#"/>
 			<p>
 				The music player is built using HTML, CSS & JS. It was built to enhance the knowledge on the frontend
 				field.
@@ -52,7 +67,7 @@
 		</section>
 		<section>
 			<h3>Currency Converter</h3>
-			<img alt="Image of Currency Converter" src="project-thumbnail.png"/>
+			<img alt="Image of Currency Converter" src="#"/>
 			<p>
 				Currency converter lets you calculate the exchange rate between two countries. The exchange rate is
 				found retrieved using api hence it is upto dated in the market
@@ -60,18 +75,11 @@
 			<a href="#" target="_blank">View project</a>
 		</section>
 
-		<!-- End of Project block. -->
 	</section>
 
 	<!-- ***********************  WORK EXPERIENCE  *********************** -->
-	<section>
+	<section class="exp">
 		<h2>Work Experience</h2>
-		<p>
-			Optional paragraph for work experience summary. Not a part of the job
-			details. Delete if not being used.
-		</p>
-
-		<!-- Copy this whole <section> block to add more jobs. -->
 		<section>
 			<h3>Machine Learning Intern</h3>
 			<p>AiRobosoft Products and Services Pvt Ltd.</p>
@@ -88,27 +96,16 @@
 				<li>Worked in different skill set in the language of Python like Flask, SkLearn, etc</li>
 			</ul>
 		</section>
-		<!-- End of Job block. -->
-		<!-- 		<section> -->
-		<!-- 			<h3>Job title</h3> -->
-		<!-- 			<p>Company Name</p> -->
-		<!-- 			<p>Date at job</p> -->
-		<!-- 			<p>Job summary goes here. Add as many paragraphs as you need.</p> -->
-		<!-- 			<p>Optional list:</p> -->
-		<!-- 			<ul> -->
-		<!-- 				<li>Delete this list if you don't need it.</li> -->
-		<!-- 				<li>Created...</li> -->
-		<!-- 				<li>Lead...</li> -->
-		<!-- 				<li>Responsible for...</li> -->
-		<!-- 			</ul> -->
-		<!-- 		</section> -->
+	</section>
+	<!-- ***************************  SKILLS  **************************** -->
+	<section class="skills" id="skills">
+
 	</section>
 
 	<!-- ******************  EDUCATION & CERTIFICATIONS ****************** -->
-	<section>
+	<section class="edu" id="education">
 		<h2>Education</h2>
 
-		<!-- Copy this whole <section> block to add more schools. -->
 		<section>
 			<h3>GOVERNMENT ENGINEERING COLLEGE KUSHALNAGAR</h3>
 			<h3>VISVESVARAYA TECHNOLOGICAL UNIVERSITY – Karnataka, India</h3>
@@ -124,32 +121,39 @@
 		<section>
 			<h3>SRI RAMAKRISHNA HIGH SCHOOL – Karnataka, India</h3>
 			<p>High School, -2016</p>
-			<p>Received Raja Puraskara from The Bharath Scouts and Guides</p>
+			<p>Received Rajya Puraskara from <q>The Bharath Scouts and Guides</q></p>
 			<p>Cumulative Percentage: 87.2%</p>
 		</section>
 
-		<!-- End of School block. -->
-		<!-- 		<section> -->
-		<!-- 			<h3>School name - City</h3> -->
-		<!-- 			<p>Designation received or program name, year attended</p> -->
-		<!-- 			<p>Summary or accomplishments.</p> -->
-		<!-- 		</section> -->
 	</section>
 
 	<!-- *****************  CONTACT INFO / SOCIAL MEDIA  ***************** -->
-	<footer>
+	<footer class="footer" id="contact">
 		<h2>Let's Keep in Touch!</h2>
-
-		<!-- Social media and contact links. Add or remove any networks. -->
-		<ul>
-			<li><a href="mailto:ksmuralidhara0@gmail.com" target="_blank">ksmuralidhara0@gmail.ci=om</a></li>
-			<li><a href="https://github.com/slendershield" target="_blank">GitHub</a></li>
-			<li><a href="https://muralidharabhatks.com" target="_blank">muralidharabhatks.com</a></li>
-			<li><a href="https://twitter.com/myself_MDB" target="_blank">Twitter</a>
-			</li>
-			<li><a href="https://www.linkedin.com/in/ksmuralidhara0/" target="_blank">LinkedIn</a></li>
-			<li><a href="https://www.instagram.com/i_mdb_9.8/" target="_blank">Instagram</a></li>
-		</ul>
+		<!-- 		"mailto:test@example.com?subject=Testing out mailto!&body=This is only a test!" -->
+		<form>
+			<label for="name">
+				<input id="name" name="name" type="text">
+			</label><br>
+			<label for="email">
+				<input id="email" name="email" type="email">
+			</label><br>
+			<label for="content">
+				<textarea cols="30" id="content" name="content" rows="10"></textarea>
+			</label><br>
+			<button formtarget="_blank" type="submit" value="submit">Send Mail</button>
+			<button type="reset" value="reset">Reset</button>
+		</form>
+		<div class="social">
+			<ul>
+				<li><a href="mailto:ksmuralidhara0@gmail.com" target="_blank">ksmuralidhara0@gmail.ci=om</a></li>
+				<li><a href="https://github.com/slendershield" target="_blank">GitHub</a></li>
+				<li><a href="https://muralidharabhat.me" target="_blank">muralidharabhat.me</a></li>
+				<li><a href="https://twitter.com/myself_MDB" target="_blank">Twitter</a></li>
+				<li><a href="https://www.linkedin.com/in/ksmuralidhara0/" target="_blank">LinkedIn</a></li>
+				<li><a href="https://www.instagram.com/i_mdb_9.8/" target="_blank">Instagram</a></li>
+			</ul>
+		</div>
 	</footer>
 </main>
 </body>
