Updated social links
added the icons using the font awesome library

--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
 	<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
 	<title>Muralidhara Bhat KS | Full Stack Web Developer & UX Designer</title>
 	<link href="./css/style.css" rel="stylesheet"/>
+	<script
+      src="https://kit.fontawesome.com/3a3200237f.js"
+      crossorigin="anonymous"
+    ></script>
 </head>
 
 <body>
@@ -145,15 +149,52 @@
 			<button type="reset" value="reset">Reset</button>
 		</form>
 		<div class="social">
-			<ul>
-				<li><a href="mailto:ksmuralidhara0@gmail.com" target="_blank">ksmuralidhara0@gmail.ci=om</a></li>
-				<li><a href="https://github.com/slendershield" target="_blank">GitHub</a></li>
-				<li><a href="https://muralidharabhat.me" target="_blank">muralidharabhat.me</a></li>
-				<li><a href="https://twitter.com/myself_MDB" target="_blank">Twitter</a></li>
-				<li><a href="https://www.linkedin.com/in/ksmuralidhara0/" target="_blank">LinkedIn</a></li>
-				<li><a href="https://www.instagram.com/i_mdb_9.8/" target="_blank">Instagram</a></li>
-			</ul>
-		</div>
+      <a
+        href="mailto:ksmuralidhara0@gmail.com"
+        class="icon icon-mail"
+        target="_blank"
+      >
+        <i class="fa-solid fa-circle-envelope"></i>
+      </a>
+      <a
+        href="https://muralidharabhat.me"
+        class="icon icon-web"
+        target="_blank"
+      >
+        <i class="fa-solid fa-circle-envelope"></i>
+      </a>
+      <a
+        href="https://www.instagram.com/i_mdb_9.8/"
+        class="icon icon-instagram"
+        target="_blank"
+      >
+        <i class="fa-brands fa-instagram"></i>
+      </a>
+      <a
+        href="https://twitter.com/myself_MDB"
+        class="icon icon-twitter"
+        target="_blank"
+      >
+        <i class="fa-brands fa-twitter"></i>
+      </a>
+      <a href="#" class="icon icon-facebook">
+        <i class="fa-brands fa-facebook" target="_blank"></i>
+      </a>
+      <a
+        href="https://www.linkedin.com/in/ksmuralidhara0/"
+        class="icon icon-linkedin"
+        target="_blank"
+      >
+        <i class="fa-brands fa-linkedin-in"></i>
+      </a>
+      <a
+        href="https://github.com/slendershield"
+        class="icon icon-github"
+        target="_blank"
+      >
+        <i class="fa-brands fa-github"></i>
+      </a>
+    </div>
 	</footer>
 </main>
 </body>
