Updated the social links and footer

--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 	<title>Muralidhara Bhat KS | Full Stack Web Developer & UX Designer</title>
 	<link href="./css/style.css" rel="stylesheet"/>
 	<script
-      src="https://kit.fontawesome.com/3a3200237f.js"
-      crossorigin="anonymous"
-    ></script>
+			crossorigin="anonymous"
+			src="https://kit.fontawesome.com/3a3200237f.js"
+	></script>
 </head>
 
 <body>
@@ -131,70 +131,76 @@
 
 	</section>
 
-	<!-- *****************  CONTACT INFO / SOCIAL MEDIA  ***************** -->
-	<footer class="footer" id="contact">
+	<!-- *****************  CONTACT INFO ***************** -->
+	<section class="form">
 		<h2>Let's Keep in Touch!</h2>
 		<!-- 		"mailto:test@example.com?subject=Testing out mailto!&body=This is only a test!" -->
-		<form>
-			<label for="name">
-				<input id="name" name="name" type="text">
+		<form class="details">
+			<label for="name">Name
+				<input id="name" name="name" type="text" placeholder="Name">
 			</label><br>
-			<label for="email">
-				<input id="email" name="email" type="email">
+			<label for="email">Email
+				<input id="email" name="email" type="email" placeholder="email">
 			</label><br>
-			<label for="content">
-				<textarea cols="30" id="content" name="content" rows="10"></textarea>
+			<label for="content">Message
+				<textarea cols="30" id="content" name="content" rows="4" placeholder="Message you like to say to me"></textarea>
 			</label><br>
 			<button formtarget="_blank" type="submit" value="submit">Send Mail</button>
 			<button type="reset" value="reset">Reset</button>
 		</form>
+	</section>
+	<!-- *****************  SOCIAL MEDIA  ***************** -->
+	<footer class="footer" id="contact">
+		<div>
+			<small>&copy; Copyright 2022, Made by <a href="https://github.com/slendershield" target="_blank">@slendershield</a>.
+			       All rights reserved</small>
+		</div>
 		<div class="social">
-      <a
-        href="mailto:ksmuralidhara0@gmail.com"
-        class="icon icon-mail"
-        target="_blank"
-      >
-        <i class="fa-solid fa-circle-envelope"></i>
-      </a>
-      <a
-        href="https://muralidharabhat.me"
-        class="icon icon-web"
-        target="_blank"
-      >
-        <i class="fa-solid fa-circle-envelope"></i>
-      </a>
-      <a
-        href="https://www.instagram.com/i_mdb_9.8/"
-        class="icon icon-instagram"
-        target="_blank"
-      >
-        <i class="fa-brands fa-instagram"></i>
-      </a>
-      <a
-        href="https://twitter.com/myself_MDB"
-        class="icon icon-twitter"
-        target="_blank"
-      >
-        <i class="fa-brands fa-twitter"></i>
-      </a>
-      <a href="#" class="icon icon-facebook">
-        <i class="fa-brands fa-facebook" target="_blank"></i>
-      </a>
-      <a
-        href="https://www.linkedin.com/in/ksmuralidhara0/"
-        class="icon icon-linkedin"
-        target="_blank"
-      >
-        <i class="fa-brands fa-linkedin-in"></i>
-      </a>
-      <a
-        href="https://github.com/slendershield"
-        class="icon icon-github"
-        target="_blank"
-      >
-        <i class="fa-brands fa-github"></i>
-      </a>
-    </div>
+			<a
+					class="icon icon-mail"
+					href="mailto:ksmuralidhara0@gmail.com"
+					target="_blank"
+			><i class="fa-solid fa-at"></i>
+			</a>
+			<a
+					class="icon icon-web"
+					href="https://muralidharabhat.me"
+					target="_blank"
+			>
+				<i class="fa-brands fa-internet-explorer"></i>
+			</a>
+			<a
+					class="icon icon-instagram"
+					href="https://www.instagram.com/i_mdb_9.8/"
+					target="_blank"
+			>
+				<i class="fa-brands fa-instagram"></i>
+			</a>
+			<a
+					class="icon icon-twitter"
+					href="https://twitter.com/myself_MDB"
+					target="_blank"
+			>
+				<i class="fa-brands fa-twitter"></i>
+			</a>
+			<a class="icon icon-facebook" href="#" target="_blank">
+				<i class="fa-brands fa-facebook" ></i>
+			</a>
+			<a
+					class="icon icon-linkedin"
+					href="https://www.linkedin.com/in/ksmuralidhara0/"
+					target="_blank"
+			>
+				<i class="fa-brands fa-linkedin-in"></i>
+			</a>
+			<a
+					class="icon icon-github"
+					href="https://github.com/slendershield"
+					target="_blank"
+			>
+				<i class="fa-brands fa-github"></i>
+			</a>
+		</div>
 	</footer>
 </main>
 </body>
