--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8"/>
 	<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
 	<title>Muralidhara Bhat KS | Full Stack Web Developer & UX Designer</title>
-	<link href="./css/style.css" rel="stylesheet"/>
+	<link href="./css/style.css" rel="stylesheet" type="text/css"/>
 	<script
 			crossorigin="anonymous"
 			src="https://kit.fontawesome.com/3a3200237f.js"
