--- a/index.html
+++ b/index.html
@@ -1,190 +1,95 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 
 	<head>
-		<meta charset="UTF-8" />
-		<meta content="width=device-width, initial-scale=1.0" name="viewport" />
-		<title>Muralidhara Bhat KS | Full Stack Web Developer & UX Designer</title>
-		<link href="./css/style.css" rel="stylesheet" type="text/css" />
+		<meta charset="UTF-8">
+		<meta content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
+			name="viewport">
+		<meta content="ie=edge" http-equiv="X-UA-Compatible">
+		<title>Muralidhara Bhat KS</title>
+		<!-------------- Local Stylesheet Link -------------->
+		<link href="./style.css" rel="stylesheet">
+		<!-------------- Font Awesome Link -------------->
 		<script crossorigin="anonymous" src="https://kit.fontawesome.com/3a3200237f.js"></script>
+		<!-------------- Owl Carousel Links -------------->
+		<link crossorigin="anonymous"
+			href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"
+			integrity="sha512-tS3S5qG0BlhnQROyJXvNjeEM4UpMXHrQfTGmbQ1gKmelCxlSEBUaxhRBj/EFTzpbP4RVSrpEikbmdJobCvhE3g=="
+			referrerpolicy="no-referrer" rel="stylesheet" />
+		<link crossorigin="anonymous"
+			href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css"
+			integrity="sha512-sMXtMNL1zRzolHYKEujM2AqCLUR9F2C4/05cdbxjjLSRvMQIciEPCQZo++nk7go3BtSuK9kfa/s+a4f4i5pLkw=="
+			referrerpolicy="no-referrer" rel="stylesheet" />
+		<!-------------- AOS Link -------------->
+		<link href="https://unpkg.com/aos@next/dist/aos.css" rel="stylesheet" />
 	</head>
 
 	<body>
 
-		<main>
-			<!-- ************************ NAVIGATION / QUICK LINKS *************** -->
-			<header class="header">
-				<div>
-					<img alt="logo" src="#" />
+		<!-------------- Navbar -------------->
+		<header>
+			<nav id="navbar">
+				<div class="logo">
+					<img alt="" src="/favicon_io/android-chrome-192x192.png">
 				</div>
-				<nav>
-					<ul>
-						<!--***********  https://muralidharabhat.me  ************* -->
-						<li><a href="#profile">Home</a></li>
-						<li><a href="#projects">Projects</a></li>
-						<li><a href="#skills">Skills</a></li>
-						<li><a href="#education">Education</a></li>
-						<li><a href="#contact">Contact</a></li>
-					</ul>
-				</nav>
-			</header>
-			<!-- ***********************  ABOUT / PROFILE  *********************** -->
-			<section class="profile" id="profile">
-				<h1>Muralidhara Bhat KS</h1>
-				<h2>
-					<span>Full Stack Web Developer</span>
-					<span>UX Designer</span>
-				</h2>
-			</section>
+				<ul class="nav-items">
+					<li><a href="#home">Home</a></li>
+					<li><a href="#about">About</a></li>
+					<li><a href="#services">Services</a></li>
+					<li><a href="#resume">Resume</a></li>
+					<li><a href="#portfolio">Portfolio</a></li>
+					<li><a href="#blogs">Blogs</a></li>
+					<li><a href="#contact">Contact</a></li>
+				</ul>
+			</nav>
+		</header>
 
-			<!-- ********************  PROJECTS / PORTFOLIO  ********************* -->
-			<section class="projects" id="projects">
-				<h2>Featured Projects</h2>
-				<p>
-					View selected projects below. More information can be found at my
-					<a href="https://github.com/slendershield">GitHub</a> Profile.
-				</p>
-
-				<section>
-					<h3>Analytics Trading Using Python</h3>
-					<img alt="code sample of Trading project" src="#" />
-					<p>
-						Algorithmic Trading is a new way of trading that has created a new
-						wave. The advantage of algorithmic trading are that it has not only
-						increased the speed of trades, but also made it easier to understand
-						the market.
-					</p>
-					<a href="#" target="_blank">View project</a>
-				</section>
-
-				<section>
-					<h3>Web Music Player</h3>
-					<img alt="image of Music player" src="#" />
-					<p>
-						The music player is built using HTML, CSS & JS. It was built to enhance the knowledge on the
-						frontend
-						field.
-					</p>
-					<a href="#" target="_blank">View project</a>
-				</section>
-				<section>
-					<h3>Currency Converter</h3>
-					<img alt="Image of Currency Converter" src="#" />
-					<p>
-						Currency converter lets you calculate the exchange rate between two countries. The exchange
-						rate
-						is
-						found retrieved using api hence it is upto dated in the market
-					</p>
-					<a href="#" target="_blank">View project</a>
-				</section>
-
-			</section>
-
-			<!-- ***********************  WORK EXPERIENCE  *********************** -->
-			<section class="exp">
-				<h2>Work Experience</h2>
-				<section>
-					<h3>Machine Learning Intern</h3>
-					<p>AiRobosoft Products and Services Pvt Ltd.</p>
-					<p>Date at job</p>
-					<p>The job required me to work in the field of Machine Learning</p>
-					<p>Description:</p>
-					<ul>
-						<li>Identified, researched, and evaluated innovative machine learning technologies,
-							explaining
-							details
-							to
-							coworkers
-						</li>
-						<li>Designed and deployed machine learning models into product stack in support of product
-							development
-						</li>
-						<li>Worked in different skill set in the language of Python like Flask, SkLearn, etc</li>
-					</ul>
-				</section>
-			</section>
-			<!-- ***************************  SKILLS  **************************** -->
-			<section class="skills" id="skills">
-
-			</section>
-
-			<!-- ******************  EDUCATION & CERTIFICATIONS ****************** -->
-			<section class="edu" id="education">
-				<h2>Education</h2>
-
-				<section>
-					<h3>GOVERNMENT ENGINEERING COLLEGE KUSHALNAGAR</h3>
-					<h3>VISVESVARAYA TECHNOLOGICAL UNIVERSITY – Karnataka, India</h3>
-					<p>Bachelor of Engineering in Computer Science, 2018-2022</p>
-					<p>Was part of GDSC Mait</p>
-					<p>Cumulative CGPA: 7.48</p>
-				</section>
-				<section>
-					<h3>VIVEKANANDA PRE-UNIVERSITY COLLEGE – Karnataka, India</h3>
-					<p>Pre-University (10+2), Science, 2016-2018</p>
-					<p>Cumulative Percentage: 79.5%</p>
-				</section>
-				<section>
-					<h3>SRI RAMAKRISHNA HIGH SCHOOL – Karnataka, India</h3>
-					<p>High School, -2016</p>
-					<p>Received Rajya Puraskara from <q>The Bharath Scouts and Guides</q></p>
-					<p>Cumulative Percentage: 87.2%</p>
-				</section>
-
-			</section>
-
-			<!-- *****************  CONTACT INFO ***************** -->
-			<section class="form">
-				<h2>Let's Keep in Touch!</h2>
-				<!-- 		"mailto:test@example.com?subject=Testing out mailto!&body=This is only a test!" -->
-				<form class="details">
-					<label for="name">Name
-						<input id="name" name="name" placeholder="Name" type="text">
-					</label><br>
-					<label for="email">Email
-						<input id="email" name="email" placeholder="email" type="email">
-					</label><br>
-					<label for="content">Message
-						<textarea cols="30" id="content" name="content" placeholder="Message you like to say to me"
-							rows="4"></textarea>
-					</label><br>
-					<button formtarget="_blank" type="submit" value="submit">Send Mail</button>
-					<button type="reset" value="reset">Reset</button>
-				</form>
-			</section>
-			<!-- *****************  SOCIAL MEDIA  ***************** -->
-			<footer class="footer" id="contact">
-				<div>
-					<small>&copy; Copyright 2022, Made by <a href="https://github.com/slendershield"
-							target="_blank">@slendershield</a>.
-						All rights reserved</small>
+		<!-------------- Home Section -------------->
+		<section id="home">
+			<div class="text-holder">
+				<h1>Muralidhara <span>Bhat KS</span></h1>
+				<h3><span>Web Developer</span> Based in India</h3>
+				<div class="button">
+					<button class="btn">
+						<a href="#portfolio">My Works</a>
+					</button>
 				</div>
-				<div class="social">
-					<a class="icon icon-mail" href="mailto:ksmuralidhara0@gmail.com" target="_blank"><i
-							class="fa-solid fa-at"></i>
-					</a>
-					<a class="icon icon-web" href="https://muralidharabhat.me" target="_blank">
-						<i class="fa-brands fa-internet-explorer"></i>
-					</a>
-					<a class="icon icon-instagram" href="https://www.instagram.com/i_mdb_9.8/" target="_blank">
-						<i class="fa-brands fa-instagram"></i>
-					</a>
-					<a class="icon icon-twitter" href="https://twitter.com/myself_MDB" target="_blank">
-						<i class="fa-brands fa-twitter"></i>
-					</a>
-					<a class="icon icon-facebook" href="#" target="_blank">
-						<i class="fa-brands fa-facebook"></i>
-					</a>
-					<a class="icon icon-linkedin" href="https://www.linkedin.com/in/ksmuralidhara0/" target="_blank">
-						<i class="fa-brands fa-linkedin-in"></i>
-					</a>
-					<a class="icon icon-github" href="https://github.com/slendershield" target="_blank">
-						<i class="fa-brands fa-github"></i>
-					</a>
-				</div>
-			</footer>
-		</main>
+			</div>
+			<div class="hero-img">
+				<img alt="" src="/Images/Main.jpg">
+			</div>
+			<div class="social-icons">
+				<a href=""><i class="fa-brands fa-facebook-f"></i></a>
+				<a href=""><i class="fa-brands fa-instagram"></i></a>
+				<a href=""><i class="fa-brands fa-github"></i></a>
+				<a href=""><i class="fa-brands fa-twitter"></i></a>
+				<a href=""><i class="fa-brands fa-linkedin-in"></i></a>
+			</div>
+			<div class="scroll-text">
+				<a href="#about">Scroll</a>
+			</div>
+		</section>
+
+		<!-------------- About Section -------------->
+
+
+		<!-------------- Jquery Scripts -------------->
+		<script crossorigin="anonymous"
+			integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ=="
+			referrerpolicy="no-referrer"
+			src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+		<!-------------- Owl Carousel Scripts -------------->
+		<script crossorigin="anonymous"
+			integrity="sha512-bPs7Ae6pVvhOSiIcyUClR7/q2OAsRiovw4vAkX+zJbw3ShAeeqezq50RIIcIURq7Oa20rW2n2q+fyXBNcU9lrw=="
+			referrerpolicy="no-referrer"
+			src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
+		<!-------------- AOS Scripts -------------->
+		<script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+		<script>
+			AOS.init();
+		</script>
+		<!-------------- Local Script -------------->
+		<script src="script.js"></script>
 	</body>
 
 </html>
