updated the css and js links

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<meta content="ie=edge" http-equiv="X-UA-Compatible">
 		<title>Muralidhara Bhat KS</title>
 		<!-------------- Local Stylesheet Link -------------->
-		<link href="./style.css" rel="stylesheet">
+		<link href="./css/style.css" rel="stylesheet">
 		<!-------------- Font Awesome Link -------------->
 		<script crossorigin="anonymous" src="https://kit.fontawesome.com/3a3200237f.js"></script>
 		<!-------------- Owl Carousel Links -------------->
@@ -89,7 +89,7 @@
 			AOS.init();
 		</script>
 		<!-------------- Local Script -------------->
-		<script src="script.js"></script>
+		<script src="./js/script.js"></script>
 	</body>
 
 </html>
