Added About & Services section

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 		<header>
 			<nav id="navbar">
 				<div class="logo">
-					<img alt="" src="/favicon_io/android-chrome-192x192.png">
+					<img alt="" src="/Images/android-chrome-192x192.png">
 				</div>
 				<ul class="nav-items">
 					<li><a href="#home">Home</a></li>
@@ -71,6 +71,74 @@
 		</section>
 
 		<!-------------- About Section -------------->
+		<section id="about">
+			<div class="container">
+				<div class="about-img">
+					<img alt="" src="/Images/profile.jpg">
+				</div>
+				<div class="text-wrapper">
+					<h4>Muralidhara Bhat KS</h4>
+					<h5>A <span>Web Developer</span> based in India</h5>
+					<p>I graduated from the Government Engineering College Kushalnagar with a degree in Computer
+						Science.
+					</p>
+					<p> Throughout the years of learning, I have gained experience in the fields of Front End and Back
+						End
+						development. I have acquired the skills like HTML, CSS, JavaScript, Bootstrap, React, and for
+						the back
+						end Node, Express, GoLang, Python, and finally MySQL, MongoDB, with version control system Git &
+						GitHub.
+					</p>
+					<p> Let's connect, looking forward to hearing from you.</p>
+					<div class="about-list">
+						<div class="list-item">
+							<label>Email</label>
+							<p><a href="mailto:ksmuralidhara0@gmail.com">ksmuralidhara0@gmail.com</a></p>
+						</div>
+					</div>
+					<button class="btn"><a href="#">Download Resume</a></button>
+				</div>
+			</div>
+		</section>
+
+		<!-------------- Services Section -------------->
+
+		<section id="services">
+			<div class="heading-wrapper">
+				<div class="heading">
+					<h2>My Area of work</h2>
+				</div>
+				<div class="animate-bar"></div>
+
+				<div class="sub-heading">
+					<p>My area of interest in which i work</p>
+				</div>
+			</div>
+			<div class="container">
+				<div class="service-card">
+					<div class="card-content">
+						<i class="fa-solid fa-pen-to-square"></i>
+						<h5>Web Developer / Designer</h5>
+						<p>I develop websites in the area of Front-end, Back-end and/or Full-Stack</p>
+					</div>
+				</div>
+				<div class="service-card">
+					<div class="card-content">
+						<i class="fa-solid fa-pen-ruler"></i>
+						<h5>UX Designer</h5>
+						<p>User Experience is a field where one has to be both user and stack holder.</p>
+					</div>
+				</div>
+				<div class="service-card">
+					<div class="card-content">
+						<i class="fa-solid fa-code"></i>
+						<h5>Software Developer</h5>
+						<p>Have the skills and mind set to be a software developer</p>
+					</div>
+				</div>
+			</div>
+		</section>
+
 
 
 		<!-------------- Jquery Scripts -------------->
