Added the Resume section, started portfolio section

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<meta content="ie=edge" http-equiv="X-UA-Compatible">
 		<title>Muralidhara Bhat KS</title>
 		<!-------------- Local Stylesheet Link -------------->
-		<link href="./css/style.css" rel="stylesheet">
+		<link href="css/style.css" rel="stylesheet">
 		<!-------------- Font Awesome Link -------------->
 		<script crossorigin="anonymous" src="https://kit.fontawesome.com/3a3200237f.js"></script>
 		<!-------------- Owl Carousel Links -------------->
@@ -30,7 +30,7 @@
 		<header>
 			<nav id="navbar">
 				<div class="logo">
-					<img alt="" src="/Images/android-chrome-192x192.png">
+					<img alt="" src="/favicon_io/android-chrome-192x192.png">
 				</div>
 				<ul class="nav-items">
 					<li><a href="#home">Home</a></li>
@@ -59,11 +59,14 @@
 				<img alt="" src="/Images/Main.jpg">
 			</div>
 			<div class="social-icons">
-				<a href=""><i class="fa-brands fa-facebook-f"></i></a>
-				<a href=""><i class="fa-brands fa-instagram"></i></a>
-				<a href=""><i class="fa-brands fa-github"></i></a>
-				<a href=""><i class="fa-brands fa-twitter"></i></a>
-				<a href=""><i class="fa-brands fa-linkedin-in"></i></a>
+				<a href="https://www.facebook.com/ksmuralidhara0/" target="_blank"><i
+						class="fa-brands fa-facebook-f"></i></a>
+				<a href="https://www.instagram.com/i_mdb_9.8/" target="_blank"><i
+						class="fa-brands fa-instagram"></i></a>
+				<a href="https://github.com/slendershield" target="_blank"><i class="fa-brands fa-github"></i></a>
+				<a href="https://twitter.com/myself_MDB" target="_blank"><i class="fa-brands fa-twitter"></i></a>
+				<a href="https://www.linkedin.com/in/ksmuralidhara0/" target="_blank"><i
+						class="fa-brands fa-linkedin-in"></i></a>
 			</div>
 			<div class="scroll-text">
 				<a href="#about">Scroll</a>
@@ -74,7 +77,7 @@
 		<section id="about">
 			<div class="container">
 				<div class="about-img">
-					<img alt="" src="/Images/profile.jpg">
+					<img alt="" src="Images/profile.jpg">
 				</div>
 				<div class="text-wrapper">
 					<h4>Muralidhara Bhat KS</h4>
@@ -139,7 +142,167 @@
 			</div>
 		</section>
 
+		<!-------------- Resume Section -------------->
 
+		<section id="resume">
+			<div class="heading-wrapper">
+				<div class="heading">
+					<h2>Resume</h2>
+				</div>
+				<div class="animate-bar"></div>
+
+				<div class="sub-heading">
+					<p>My education and experience till date:</p>
+				</div>
+			</div>
+			<div class="container">
+				<!-------------- Experience -------------->
+				<div class="experience">
+					<div class="title">
+						<h4>Experience</h4>
+					</div>
+					<!-- 			Add more experience if needed -->
+					<div class="resume-list">
+						<div class="item-arrow"></div>
+						<h5>Machine Learning Intern</h5>
+						<span>Airobosot </span>
+						<p>Worked in the field of AI and ML</p>
+					</div>
+				</div>
+
+				<!-------------- Education -------------->
+				<div class="education">
+					<div class="title">
+						<h4>Education</h4>
+					</div>
+					<!-- 			Add more experience if needed -->
+					<div class="resume-list">
+						<div class="item-arrow"></div>
+						<h5>Computer Science and Engineering</h5>
+						<span>CGPA: "7.3" | 2018-2022</span>
+						<p>Graduated from Government Engineering College Kushalnagar</p>
+					</div>
+				</div>
+			</div>
+
+			<section id="skills">
+				<div class="heading-wrapper">
+					<div class="heading">
+						<h2>My Skills</h2>
+					</div>
+					<div class="animate-bar"></div>
+				</div>
+				<div class="container">
+					<div class="progress-items">
+						<div class="text">
+							<h5>HTML</h5>
+						</div>
+						<div class="progress-bar">
+							<div class="progress-line html"></div>
+						</div>
+					</div>
+					<div class="progress-items">
+						<div class="text">
+							<h5>CSS</h5>
+						</div>
+						<div class="progress-bar">
+							<div class="progress-line css"></div>
+						</div>
+					</div>
+					<div class="progress-items">
+						<div class="text">
+							<h5>JavaScript</h5>
+						</div>
+						<div class="progress-bar">
+							<div class="progress-line js"></div>
+						</div>
+					</div>
+					<div class="progress-items">
+						<div class="text">
+							<h5>React</h5>
+						</div>
+						<div class="progress-bar">
+							<div class="progress-line react"></div>
+						</div>
+					</div>
+					<div class="progress-items">
+						<div class="text">
+							<h5>Python</h5>
+						</div>
+						<div class="progress-bar">
+							<div class="progress-line py"></div>
+						</div>
+					</div>
+					<div class="progress-items">
+						<div class="text">
+							<h5>Django</h5>
+						</div>
+						<div class="progress-bar">
+							<div class="progress-line django"></div>
+						</div>
+					</div>
+					<div class="progress-items">
+						<div class="text">
+							<h5>Node</h5>
+						</div>
+						<div class="progress-bar">
+							<div class="progress-line node"></div>
+						</div>
+					</div>
+					<div class="progress-items">
+						<div class="text">
+							<h5>MongoDB</h5>
+						</div>
+						<div class="progress-bar">
+							<div class="progress-line mongo"></div>
+						</div>
+					</div>
+					<div class="progress-items">
+						<div class="text">
+							<h5>Java</h5>
+						</div>
+						<div class="progress-bar">
+							<div class="progress-line java"></div>
+						</div>
+					</div>
+					<div class="progress-items">
+						<div class="text">
+							<h5>Git</h5>
+						</div>
+						<div class="progress-bar">
+							<div class="progress-line git"></div>
+						</div>
+					</div>
+
+				</div>
+			</section>
+		</section>
+
+
+		<!-------------- Portfolio Section -------------->
+		<section id="portfolio">
+			<div class="heading-wrapper">
+				<div class="heading">
+					<h2>Portfolio</h2>
+				</div>
+				<div class="animate-bar"></div>
+
+				<div class="sub-heading">
+					<p>My area of interest in which i work</p>
+				</div>
+			</div>
+			<!-------------- Gallery -------------->
+			<div class="gallery-wrapper">
+				<div class="gallery-nav">
+					<div class="gallery-filter">
+						<span class="filter-item">All</span>
+						<span class="filter-item">Brand</span>
+						<span class="filter-item">Design</span>
+						<span class="filter-item">Photos</span>
+					</div>
+				</div>
+			</div>
+		</section>
 
 		<!-------------- Jquery Scripts -------------->
 		<script crossorigin="anonymous"
@@ -157,7 +320,7 @@
 			AOS.init();
 		</script>
 		<!-------------- Local Script -------------->
-		<script src="./js/script.js"></script>
+		<script src="js/script.js"></script>
 	</body>
 
 </html>
